--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -35,7 +35,7 @@
         <ul class="nav navbar-nav hidden-lg hidden-md hidden-sm list-group">
           <li class="list-group-item list-group-item-success"><a href="#" class="text-center">Chicken</a></li>
           <li class="list-group-item list-group-item-info"><a href="#" class="text-center">Beef</a></li>
-          <li><a href="#" class="text-center">Sushi</a></li>
+          <li class="list-group-item list-group-item-warning"><a href="#" class="text-center">Sushi</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
